# cold_outreach

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
campaigns/: README.md  consulting-internship.yaml  internship.yaml
src/outreach/: browser.py  campaign.py  cli.py  config.py  contact.py  db.py  discover.py  message.py  pipeline.py  scraper.py  sender.py
tests/: test_campaign.py  test_db.py  test_scraper_normalize.py
wa-bridge/: index.js  package.json
