[project]
name = "outreach"
version = "0.1.0"
description = "Personal cold-outreach agent: LinkedIn scrape -> ContactOut -> Gemini -> WhatsApp"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=1.8.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.1",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.3",
    "google-genai>=2.3.0",
]

[project.scripts]
outreach = "outreach.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outreach"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
